31 de agosto 5:30pm

--- a/capitulos/abstract.tex
+++ b/capitulos/abstract.tex
@@ -2,8 +2,11 @@
     \section*{Abstract}    
 \end{center}
 
-El presente Trabajo de Diploma trata el proceso de diseño e instalación de un sistema de monitoreo y visualización de las variables para el control del estado de conservación de las piezas pertenecientes a la muestra Prat Puig ubicada en la Oficina del Historiador de la provincia de Santiago de Cuba. Se tratan generalidades sobre la aplicación del Iot en museos a nivel internacional y en Cuba. Se realiza una caracterización de los sensores a emplear para el control, así como el montaje de un sistema de seguridad.
+This Diploma Work deals with the design and installation process of a monitoring and visualization system of the variables for the control of the state of conservation of the pieces belonging to the Prat Puig sample located in the Office of the Historian of the province of Santiago de Cuba. Generalities about the application of the IoT in museums at an international level and in Cuba are discussed. A characterization of the sensors to be used for control is carried out, as well as the assembly of a security system.\\
+In accordance with the characteristics of the place, the assembly of said system is carried out, facilitating the control of the state of the pieces and providing the center's specialists with the necessary data for decision-making in the face of future events. This system can be used in subsequent projects related to the supervision of objects, facilitating the visualization of their status and early warning in the event of possible effects.
 
-En concordancia con las características del lugar se efectúa el montaje de dicho sistema facilitando el control del estado de las piezas y propiciándole a los especialistas del centro los datos necesarios para la toma de decisiones ante futuros eventos de. Este sistema puede ser empleado en posteriores proyectos relacionados con la supervisión de objetos, facilitando la visualización del estado de los mismos y la alerta temprana en caso de posibles afectaciones.\\
+\vfill
 
-\textbf{[Traducir]}
+\begin{flushleft}
+    \textbf{Keywords: }
+\end{flushleft}
