--- a/capitulos/introduccion.tex
+++ b/capitulos/introduccion.tex
@@ -8,15 +8,15 @@
 
     El término Internet de las Cosas o IoT (Internet of Things, por sus siglas en inglés), fue utilizado por primera vez por Kevin Ashton en 1999 cuando estaba trabajando en el campo de la tecnología RFID en red (identificación por radiofrecuencia) y tecnologías de detección emergentes. Sin embargo, el IoT nació en algún momento entre 2008 y 2009. \cite{evolucionIoT}\\
 
-    El IoT se trata de un concepto que se basa en la interconexión de los objetos con su alrededor. Los objetos de esta nueva generación incorporan la capacidad de adquirir datos, comunicarse entre sí y activar comportamientos reactivos a las condiciones cambiantes del contexto. Este concepto pretende reflejar la profunda transformación y el radical cambio de paradigmas que está experimentando nuestra forma de vivir en hogares, ciudades y entornos de trabajo.\\
+    El IoT se trata de un concepto que se basa en la interconexión de los objetos con su entorno. Los objetos de esta nueva generación incorporan la capacidad de adquirir datos, comunicarse entre sí y activar comportamientos reactivos a las condiciones cambiantes del contexto \cite{agriculturaPrecision}. Este concepto pretende reflejar la profunda transformación y el radical cambio de paradigmas que está experimentando nuestra forma de vivir en hogares, ciudades y entornos de trabajo.\\
 
-    Nos encontramos ante un salto tecnológico que afecta directamente a cómo la humanidad se enfrenta a los retos. En definitiva, IoT revolucionará la concepción que posee el ser humano acerca de su mundo y la forma de interaccionar con él. \cite{revolucionDefinitiva} \\
+    Nos encontramos ante un salto tecnológico que afecta directamente a cómo la humanidad se enfrenta a los retos. En definitiva, el IoT revolucionará la concepción que posee el ser humano acerca de su mundo y la forma de interaccionar con él. \cite{revolucionDefinitiva} \\
 
     Las nuevas tecnologías que caracterizan el empleo del Internet de las Cosas permiten realizar entornos inteligentes reales capaces de proporcionar servicios avanzados a los usuarios. El objetivo es hacer que las cosas se comuniquen entre sí, establezcan comportamientos de acuerdo a patrones pre-fijados y, por consiguiente, sean más inteligentes e independientes.\\
     
     Recientemente, estos entornos inteligentes también se están explotando para renovar el interés de los usuarios por el patrimonio cultural, al garantizar experiencias culturales interactivas reales. Dentro de las instituciones de patrimonio cultural, las tecnologías en red tienen un enorme potencial para mejorar los esfuerzos de conservación, el aumento del acceso a los conocimientos contextuales y para reinventar la interacción de las personas con las obras culturales.\\
     
-    La Universidad de Oriente cuenta con tres muestras expositivas como parte de su patrimonio cultural. Dos de ellas se encuentran en la sede Antonio Maceo; la primera, con carácter arqueológico, situada en la planta baja de la Facultad de Ciencias Sociales. Mientras que la segunda, museo de Historia Natural Dr. Theodoro Ramsden de la Torre, se localiza en la tercera planta de la Facultad de Derecho. Estas no están abiertas directamente al público debido a su ubicación en aulas, siendo así empleados como medios de enseñanza.\\ 
+    La Universidad de Oriente cuenta con tres muestras expositivas como parte de su patrimonio cultural. Dos de ellas se encuentran en la sede Antonio Maceo; la primera, con carácter arqueológico, situada en la planta baja de la Facultad de Ciencias Sociales. Mientras que la segunda, el museo de Historia Natural Dr. Theodoro Ramsden de la Torre, se localiza en la tercera planta de la Facultad de Derecho. Estas no están abiertas directamente al público debido a su ubicación en aulas, siendo así empleados como medios de enseñanza.\\ 
     
     La tercera de estas muestras, la Francisco Prat Puig, ubicada en la Oficina del Historiador de la Ciudad de Santiago de Cuba, contiene piezas de interés histórico y cultural. A diferencia de las muestras anteriores ésta posee características de museo y se encuentra emplazada en un lugar con acceso al público. Allí se destacan colecciones de numismática, artes plásticas, cerámica, condecoraciones, objetos personales entre otras; estas fueron donadas por el propio Prat a la Casa de Altos Estudios oriental las cuales actualmente se encuentran en un estado de deterioro por falta de las condiciones que requiere el local para su conservación.\\
     
