--- a/tesis.tex
+++ b/tesis.tex
@@ -14,6 +14,9 @@
 \usepackage{subcaption}
 \usepackage{enumerate} %enumeraciones
 \usepackage{apacite}
+%\usepackage{geometry}
+%\usepackage{float}
+%\usepackage{wrapfig}
 \usepackage[T1]{fontenc}
 \usepackage[scaled]{uarial}
 \renewcommand*\familydefault{\sfdefault}
